End of Section 3

--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -4,7 +4,7 @@
     <!-- Welcome to {{ title }}! This syntax here is known as interpellation, when this page is loaded it will replace the title with the title from (app.modules.ts) -->
     Dating App
   </h1>
-  <app-value></app-value>>
+  <app-value></app-value>
   
 </div>
 
